@@ -243,7 +243,8 @@ static jint JNICALL NativeRunAtariProgram(JNIEnv *env, jobject this,
 		CARTRIDGE_BLIZZARD_32_DESC,
 		CARTRIDGE_MEGAMAX_2048_DESC,
 		CARTRIDGE_THECART_128M_DESC,
-		CARTRIDGE_MEGA_4096_DESC
+		CARTRIDGE_MEGA_4096_DESC,
+		CARTRIDGE_MEGA_2048_DESC
 	};
 
 	const jbyte *img_utf = NULL;
