@@ -255,7 +255,7 @@ Turn on Atari BASIC ROM
 .BI \-cart\  filename
 Insert cartridge (CART or raw format)
 .TP
-.BR "\-cart\-type 0" .. 63
+.BR "\-cart\-type 0" .. 64
 Select type of the cartridge inserted with the \fB\-cart\fR option.
 When inserting a raw ROM image its type cannot be detected automaticcaly,
 and must be provided with this option.
@@ -452,6 +452,9 @@ The!Cart 128 MB cartridge
 .TP
 .B 63
 Flash MegaCart 4 MB cartridge
+.TP
+.B 64
+MegaCart 2 MB cartridge
 .PD
 .RE
 If this option is not given, the user will be asked to choose the cartridge
@@ -462,7 +465,7 @@ Insert piggyback cartridge (CART or raw format).
 This works only if the first cartridge is a pass-through (currently only
 SpartaDOS X 64KB and 128KB types).
 .TP
-.BR "\-cart2\-type 0" .. 63
+.BR "\-cart2\-type 0" .. 64
 Select type of the cartridge inserted with the \fB-cart2\fR option.
 When inserting a raw ROM image its type cannot be detected automatically,
 and must be provided with this option.
