@@ -111,7 +111,8 @@ int const CARTRIDGE_kb[CARTRIDGE_LAST_SUPPORTED + 1] = {
 	32,       /* CARTRIDGE_TURBO_HIT_32 */
 	2048,     /* CARTRIDGE_MEGA_2048 */
 	128*1024, /* CARTRIDGE_THECART_128M */
-	4096      /* CARTRIDGE_MEGA_4096 */
+	4096,     /* CARTRIDGE_MEGA_4096 */
+	2048      /* CARTRIDGE_MEGA_2048 */
 };
 
 int CARTRIDGE_autoreboot = TRUE;
@@ -194,7 +195,7 @@ static void set_bank_A0BF(int n)
 }
 
 /* MEGA_16, MEGA_32, MEGA_64, MEGA_128, MEGA_256, MEGA_512, MEGA_1024,
-   MEGAMAX_2048 */
+   MEGAMAX_2048, MEGA_2048 */
 static void set_bank_80BF(void)
 {
 	if (active_cart->state & 0x80) {
@@ -315,6 +316,7 @@ static void SwitchBank(int old_state)
 	case CARTRIDGE_MEGA_256:
 	case CARTRIDGE_MEGA_512:
 	case CARTRIDGE_MEGA_1024:
+	case CARTRIDGE_MEGA_2048:
 	case CARTRIDGE_MEGAMAX_2048:
 		set_bank_80BF();
 		break;
@@ -601,11 +603,12 @@ static void MapActiveCart(void)
 		case CARTRIDGE_MEGA_256:
 		case CARTRIDGE_MEGA_512:
 		case CARTRIDGE_MEGA_1024:
+		case CARTRIDGE_MEGA_2048:
+		case CARTRIDGE_MEGA_4096:
 		case CARTRIDGE_SIC_128:
 		case CARTRIDGE_SIC_256:
 		case CARTRIDGE_SIC_512:
 		case CARTRIDGE_MEGAMAX_2048:
-		case CARTRIDGE_MEGA_4096:
 			break;
 		default:
 			MEMORY_Cart809fDisable();
@@ -955,6 +958,7 @@ static void PutByte(CARTRIDGE_image_t *cart, UWORD addr, UBYTE byte)
 	case CARTRIDGE_SWXEGS_512:
 		new_state = byte & 0xbf;
 		break;
+	case CARTRIDGE_MEGA_2048:
 	case CARTRIDGE_SWXEGS_1024:
 		new_state = byte;
 		break;
